scss/_menu.scss
.navbar-center {
  justify-content: center;
  margin-right: auto;
  margin-left: auto;
  align-items: stretch;
  display: flex;
  @include desktop {
    width: 83%;
  }
  @include widescreen {
    width: 70%;
  }

  > .navbar-item {
    @include tablet {
      margin: 0 0.5rem;
      width: calc((100%-4rem)/5);
      justify-content: center;

      .navbar-link::after {
        border-width: 2px;
      }
    }
  }

}
.navbar.is-transparent .navbar-center .navbar-link {
  color: $dark-invert;
}
.navbar.is-transparent .social-links a {
  color: $dark-invert;
  font-size: 1.5rem;
  margin: 0 .5rem;

  &:hover {
    color: $primary;
  }
}
.navbar-logo {
  position: absolute;
  left: calc(50% - 1.5rem);

  .navbar-logo-image {
    height: 3rem;
    z-index: 3;
  }
}

.navbar-burger.burger {
  z-index: 3;
}
.navbar-burger span {
  height: 2px;
}


#mobileNavMenu {
  background-color: $dark;
  display: none;
  font-size: 1.2em;
  left: 0;
  min-height: 100vh;
  padding: 6rem 1rem;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: 2;

  &.is-active {
    display: block;
  }

  .menu-list {
    margin-bottom: 1.5rem;
  }

  .menu-list a {
    color: $dark-invert;

    &:hover {
      background-color: $black;
    }
  }

  .social-links {
    font-size: 2rem;
    padding: 1rem 0;
  }

  .social-links a:hover {
    color: $primary;
  }
}

